Added support for Telegram Bot API 1.0, some minor improvements, and disabled all skype code, because it is linux specific.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
-    "dbfile": "/home/fgss/.pichi/pichi.db",
+    "dbfile": "database.db",
+    "sqlite_mode": "-1",
     "answer_mode": "bynick",
     "nicklist": "Железяка",
+    "enabled_modules": ["telegram"],
     "modules": [{
 			"network": "vk",
 			"login": "petuhach@yandex.ua",
@@ -16,5 +18,9 @@
 		},
 		{
 			"network": "skype"
+		},
+        {
+			"network": "telegram",
+			"token": "your_token"
 		}]
 } 
