Fixed bug with '' string in SQLite3 database. Fixed indentation in files.

--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
     "dbfile": "database.db",
     "sqlite_mode": "-1",
+	"worker_threads" : "2",
     "answer_mode": "bynick",
-    "enabled_modules": ["telegram"],
+    "enabled_modules": ["telegram", "vk"],
     "modules": [{
 			"network": "vk",
 			"token": "blablabla",
@@ -21,6 +22,6 @@
 		},
         {
 			"network": "telegram",
-			"token": ""
+			"token": "blablabla"
 		}]
 } 
