Implement changing db on fly

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "sqlite_mode": "-1",
     "worker_threads" : "2",
     "answer_mode": "bynick",
+	"admin_id": "lol kek lel",
 	"voice_api_backend": "voice_backend.py",
     "enabled_modules": ["telegram", "vk"],
     "modules": [{
